tests/error/func_error_scan2.gw
// [contains] unknown in declaration
function void test() { skfuv sd; }
